--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Plantspedia</title>
+  <meta name="keywords" content="Plantspedia, plants, seasonal plants, plant nursery,raipur,chhattisgarh, garden, personalized garden, gardening tools, garden design, plant decoration, plant recommendation, aquatic plants, plants info, plants information, indoor plants">
+  <meta name="description" content="We help in designing a personalized garden with ease. From plant recommendations according to your space and style to design tools, it makes garden planning simple and inspiring.">
+  <link rel="shortcut icon" href="./assets/logo.ico" type="image/x-icon">
+  <title>Plantspedia- your personalized guide to an Enchanting garden</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" xintegrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
