--- a/index.html
+++ b/index.html
@@ -478,7 +478,9 @@
     </div>
 </footer>
 
-
+<a href="https://wa.me/918770527828" class="whatsapp-float" >
+  <i class="fab fa-whatsapp"></i>
+</a>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     
